--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye." />
   <title>नंबर इनसाइट 786</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -24,10 +21,6 @@
       margin: 0;
       font-size: 32px;
       color: #00ff00;
-    }
-    header p {
-      color: #cccccc;
-      font-size: 18px;
     }
     .container {
       max-width: 1200px;
@@ -65,16 +58,24 @@
     .chat-entry div {
       color: #ff4d4d;
     }
-    .chat-entry a {
-      display: inline-block;
+    .glow-button {
       background-color: #25D366;
       color: white;
-      padding: 0.6rem 1rem;
-      border-radius: 6px;
-      font-size: 1rem;
+      padding: 0.8rem 1.6rem;
+      border-radius: 8px;
+      font-size: 1.1rem;
       text-decoration: none;
-      margin-top: 0.5rem;
+      font-weight: bold;
+      display: inline-block;
       text-align: center;
+      margin-top: 1rem;
+      animation: glowing 1.5s infinite;
+    }
+    @keyframes glowing {
+      0% { box-shadow: 0 0 5px #25D366; }
+      33% { box-shadow: 0 0 10px yellow; }
+      66% { box-shadow: 0 0 15px red; }
+      100% { box-shadow: 0 0 5px #25D366; }
     }
     .chart-table {
       width: 100%;
@@ -96,14 +97,6 @@
       text-align: center;
       margin: 2rem 0;
     }
-    .cta a {
-      background-color: #25D366;
-      color: #fff;
-      text-decoration: none;
-      padding: 1rem 2rem;
-      border-radius: 5px;
-      font-size: 20px;
-    }
     .whatsapp-fixed {
       position: fixed;
       bottom: 80px;
@@ -120,22 +113,6 @@
       50% { transform: translateY(-10px); }
       100% { transform: translateY(0); }
     }
-    .glow-button {
-      background-color: #25D366;
-      color: white;
-      padding: 0.8rem 1.6rem;
-      border-radius: 8px;
-      font-size: 1.2rem;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 0 10px #25D366, 0 0 20px #25D366;
-      transition: transform 0.2s ease-in-out;
-      display: inline-block;
-      margin-top: 1rem;
-    }
-    .glow-button:hover {
-      transform: scale(1.05);
-    }
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -146,18 +123,13 @@
   </style>
 </head>
 <body>
+
   <header>
-    <h1 class="glow">Number Insight 786</h1>
+    <h1>Number Insight 786</h1>
 
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
       🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
-
-    <div style="text-align: center;">
-      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" class="glow-button">
-        📞 WhatsApp पर संपर्क करें
-      </a>
-    </div>
 
     <p style="color: white; text-align: center;">
       NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
@@ -166,7 +138,7 @@
 
     <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
 
-    <div style="text-align: center; margin-top: 1rem;">
+    <div style="text-align: center;">
       <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" class="glow-button">
         📞 WhatsApp पर अभी बात करें
       </a>
@@ -175,12 +147,12 @@
 
   <div class="container">
     <div class="chat-box">
-      <!-- Chat entries (same as before) -->
+      <!-- Example chat entry -->
       <div class="chat-entry">
         <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" class="glow-button">अभी संपर्क करें</a>
       </div>
-      <!-- More entries... -->
+      <!-- Add more .chat-entry blocks if needed -->
     </div>
 
     <h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
@@ -197,7 +169,7 @@
     </table>
 
     <div class="cta">
-      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
+      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" class="glow-button">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
     </div>
   </div>
 
@@ -223,5 +195,6 @@
       }
     });
   </script>
+
 </body>
 </html>
