--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
   <title>नंबर इनसाइट 786</title>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -21,6 +24,10 @@
       margin: 0;
       font-size: 32px;
       color: #00ff00;
+    }
+    header p {
+      color: #cccccc;
+      font-size: 18px;
     }
     .container {
       max-width: 1200px;
@@ -58,24 +65,17 @@
     .chat-entry div {
       color: #ff4d4d;
     }
-    .glow-button {
+    .chat-entry a {
+      display: inline-block;
       background-color: #25D366;
       color: white;
-      padding: 0.8rem 1.6rem;
-      border-radius: 8px;
-      font-size: 1.1rem;
+      padding: 0.6rem 1rem;
+      border-radius: 6px;
+      font-size: 1rem;
       text-decoration: none;
-      font-weight: bold;
-      display: inline-block;
+      margin-top: 0.5rem;
       text-align: center;
-      margin-top: 1rem;
-      animation: glowing 1.5s infinite;
-    }
-    @keyframes glowing {
-      0% { box-shadow: 0 0 5px #25D366; }
-      33% { box-shadow: 0 0 10px yellow; }
-      66% { box-shadow: 0 0 15px red; }
-      100% { box-shadow: 0 0 5px #25D366; }
+      animation: glow 1.5s infinite;
     }
     .chart-table {
       width: 100%;
@@ -97,6 +97,14 @@
       text-align: center;
       margin: 2rem 0;
     }
+    .cta a {
+      background-color: #25D366;
+      color: #fff;
+      text-decoration: none;
+      padding: 1rem 2rem;
+      border-radius: 5px;
+      font-size: 20px;
+    }
     .whatsapp-fixed {
       position: fixed;
       bottom: 80px;
@@ -105,13 +113,19 @@
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 85px;
-      height: 85px;
+      width: 80px;
+      height: 80px;
     }
     @keyframes float {
       0% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
       100% { transform: translateY(0); }
+    }
+    @keyframes glow {
+      0% { box-shadow: 0 0 10px #25D366; }
+      33% { box-shadow: 0 0 15px yellow; }
+      66% { box-shadow: 0 0 20px red; }
+      100% { box-shadow: 0 0 10px #25D366; }
     }
     footer {
       text-align: center;
@@ -123,23 +137,31 @@
   </style>
 </head>
 <body>
-
   <header>
-    <h1>Number Insight 786</h1>
-
+    <h1 class="glow">Number Insight 786</h1>
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
       🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
-
     <p style="color: white; text-align: center;">
       NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
       AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
+    <p>
+      100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।
+    </p>
 
-    <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
-
-    <div style="text-align: center;">
-      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" class="glow-button">
+    <!-- ✅ WhatsApp Button with Glow -->
+    <div style="text-align: center; margin-top: 1rem;">
+      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" 
+         style="display: inline-block;
+                background: #25D366;
+                color: white;
+                padding: 12px 20px;
+                border-radius: 10px;
+                font-weight: bold;
+                text-decoration: none;
+                font-size: 18px;
+                animation: glow 1.5s infinite;">
         📞 WhatsApp पर अभी बात करें
       </a>
     </div>
@@ -147,29 +169,57 @@
 
   <div class="container">
     <div class="chat-box">
-      <!-- Example chat entry -->
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" class="glow-button">अभी संपर्क करें</a>
+        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
-      <!-- Add more .chat-entry blocks if needed -->
+      <div class="chat-entry">
+        <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)। रिजल्ट टाइम पर मिलेगा!</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं! नंबर गारंटी के साथ।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
+      </div>
     </div>
 
     <h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
     <table class="chart-table">
       <thead>
-        <tr><th>क्षेत्र</th><th>समय</th><th>संख्या</th></tr>
+        <tr>
+          <th>क्षेत्र</th>
+          <th>समय</th>
+          <th>संख्या</th>
+        </tr>
       </thead>
       <tbody>
-        <tr><td>फ़रीदाबाद</td><td>06:15 PM</td><td>78</td></tr>
-        <tr><td>ग़ाज़ियाबाद</td><td>08:15 PM</td><td>45</td></tr>
-        <tr><td>गली</td><td>11:00 PM</td><td>33</td></tr>
-        <tr><td>देशावर</td><td>04:00 AM</td><td>14</td></tr>
+        <tr><td>ज़ोन A</td><td>01:00 PM</td><td>76</td></tr>
+        <tr><td>मेट्रो B</td><td>02:00 PM</td><td>52</td></tr>
+        <tr><td>सेंट्रल सिटी</td><td>03:00 PM</td><td>93</td></tr>
+        <tr><td>क्षेत्र X</td><td>04:00 PM</td><td>14</td></tr>
+        <tr><td>नॉर्थ वैली</td><td>05:00 PM</td><td>37</td></tr>
+        <tr><td>कोस्टल एज</td><td>06:00 PM</td><td>48</td></tr>
+        <tr><td>कैपिटल रिंग</td><td>07:00 PM</td><td>62</td></tr>
+        <tr><td>ज़ोन Y</td><td>08:00 PM</td><td>20</td></tr>
+        <tr><td>मेट्रो साउथ</td><td>09:00 PM</td><td>85</td></tr>
+        <tr><td>ज़ोन Z</td><td>10:00 PM</td><td>11</td></tr>
       </tbody>
     </table>
 
     <div class="cta">
-      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" class="glow-button">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
+      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
     </div>
   </div>
 
@@ -195,6 +245,5 @@
       }
     });
   </script>
-
 </body>
 </html>
