--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
-  <title>नंबर इनसाइट 786</title>
+  <title>FIXED LEAK NUMBERS 100%</title>
   <style>
     * {
       box-sizing: border-box;
@@ -138,7 +138,7 @@
 </head>
 <body>
   <header>
-    <h1 class="glow">Number Insight 786</h1>
+    <h1 class="glow">FIXED LEAK NUMBERS 100%</h1>
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
       🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
@@ -170,27 +170,27 @@
   <div class="container">
     <div class="chat-box">
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
+        <div><strong>SURYA BHAI:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?</div>
+        <div><strong>GUDDU KHILADI:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?👑👑👇👇👑👑</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)। रिजल्ट टाइम पर मिलेगा!</div>
+        <div><strong>HEAD BRANCH:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)। रिजल्ट टाइम पर मिलेगा🔥🔥🎯🔥🔥!</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!</div>
+        <div><strong>MANAGER:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!🎯👇👇👇🎯</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं! नंबर गारंटी के साथ।</div>
+        <div><strong>AMAN RATHI:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं! नंबर गारंटी के साथ।🔥👇🔥</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें।</div>
+        <div><strong>SULTAN BHAI:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें👇।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
     </div>
