--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
-  <title>FIXED LEAK NUMBERS 100%</title>
+  <meta name="description" content="Daily Tips, Insights, Trusted Data. Educational purpose only.">
+  <title>Daily Tips & Insights</title>
   <style>
     * {
       box-sizing: border-box;
@@ -138,21 +138,21 @@
 </head>
 <body>
   <header>
-    <h1 class="glow">FIXED LEAK NUMBERS 100%</h1>
+    <h1 class="glow">Daily Tips & Insights</h1>
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
-      🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
+      🎯 Daily Trusted Insights for All Zones 🎯
     </h2>
     <p style="color: white; text-align: center;">
-      NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
-      AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
+      नीचे हमारे पास विभिन्न ज़ोन की जानकारी है।<br>
+      Trusted Daily Info लेने के लिए अभी संपर्क करें 👇👇👇
     </p>
     <p>
-      100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।
+      Trusted Daily Info पाने के लिए हमसे WhatsApp पर अभी बात करें ।
     </p>
 
     <!-- ✅ WhatsApp Button with Glow -->
     <div style="text-align: center; margin-top: 1rem;">
-      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" 
+      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20TEAM" 
          style="display: inline-block;
                 background: #25D366;
                 color: white;
@@ -170,38 +170,30 @@
   <div class="container">
     <div class="chat-box">
       <div class="chat-entry">
-        <div><strong>SURYA BHAI:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
+        <div><strong>Admin:</strong> हमारे पास Private Community Updates हैं। Daily Tips चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20TEAM">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>GUDDU KHILADI:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?👑👑👇👇👑👑</div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
+        <div><strong>Support:</strong> Trusted Daily Info आपके लिए उपलब्ध है। अभी जुड़ें और जानें आज की सही जानकारी।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20TEAM">जुड़ें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>HEAD BRANCH:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)। रिजल्ट टाइम पर मिलेगा🔥🔥🎯🔥🔥!</div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
+        <div><strong>Team:</strong> Daily Insights आपके लिए हर रोज अपडेट किए जाते हैं। आज का मौका मत गंवाइए।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20TEAM">जानें और जुड़ें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>MANAGER:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!🎯👇👇👇🎯</div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
-      </div>
-      <div class="chat-entry">
-        <div><strong>AMAN RATHI:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं! नंबर गारंटी के साथ।🔥👇🔥</div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
-      </div>
-      <div class="chat-entry">
-        <div><strong>SULTAN BHAI:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें👇।</div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
+        <div><strong>Community:</strong> Educational updates और जानकारी WhatsApp पर पाएं। अभी संपर्क करें।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20TEAM">अभी जुड़ें</a>
       </div>
     </div>
 
-    <h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
+    <h2 style="color: #00ff00">परिणाम तालिका (Results Table)</h2>
     <table class="chart-table">
       <thead>
         <tr>
           <th>क्षेत्र</th>
           <th>समय</th>
-          <th>संख्या</th>
+          <th>डेटा</th>
         </tr>
       </thead>
       <tbody>
@@ -219,18 +211,18 @@
     </table>
 
     <div class="cta">
-      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
+      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20TEAM">📲 मुख्य WhatsApp ग्रुप जॉइन करें</a>
     </div>
   </div>
 
   <div class="whatsapp-fixed">
-    <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20TEAM" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
   </div>
 
   <footer>
-    <p>यह वेबसाइट केवल शैक्षिक जानकारी साझा करने हेतु है। हम किसी भी प्रकार की सट्टा या वित्तीय गतिविधियों को प्रोत्साहित नहीं करते।</p>
+    <p>यह वेबसाइट केवल शैक्षिक जानकारी साझा करने हेतु है। हम किसी भी प्रकार की वित्तीय गतिविधियों को प्रोत्साहित नहीं करते।</p>
     <p>&copy; 2025 Insight786.in</p>
   </footer>
 
@@ -238,9 +230,9 @@
   <script>
     window.addEventListener("load", () => {
       setTimeout(() => {
-        window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI";
+        window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20TEAM";
       }, 3000); // 3 sec delay for Meta Ads safe redirect
     });
   </script>
 </body>
-  </html>
+</html>
